Accept ZWNJ, ZWJ and PUA characters in input widgets

Private Use Area characters are quite valid input characters when used
in combination with a custom font. Joiners also serve an important language
purpose in semitic writing systems.

Note that there is a hack where we disregard any character produced
using CTRL or CTRL+SHIFT specifically because of German keyboards. I have chosen to
keep the hack in this patch to limit the change (though I have made an exception
for ZWJ and ZWNJ since both are produced using Ctrl+Shift on Windows), but it
will probably have to be reverted.

[ChangeLog][QtWidgets][Input] Accept characters in Private Use Area, as well as
zero-width joiners and zero-width non-joiners in input in QLineEdit and QTextEdit.

Task-number: QTBUG-42074
Task-number: QTBUG-57003
Change-Id: Ib2c6329e604f3516b8118f027779284adadfc42b
(cherry picked from commit 7896ae052ad2c0c6ae2ebfc64cc2f525185198a8)
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>